--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
     "lint": "npm run lint-eslint && npm run lint-stylelint",
     "lint-eslint": "eslint -c eslint.config.mjs",
     "lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
@@ -31,6 +33,12 @@
     "type": "git",
     "url": "git+https://github.com/KIDinfinity/react_ts_test.git"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "ie >= 9",
+    "not op_mini all"
+  ],
   "keywords": [],
   "author": "infinity",
   "license": "ISC",
@@ -44,18 +52,38 @@
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.5.0",
     "@types/eslint__js": "^8.42.3",
+    "autoprefixer": "^10.4.19",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
+    "file-loader": "^6.2.0",
     "globals": "^15.6.0",
+    "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "lint-staged": "^15.2.7",
+    "node-sass": "^9.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.1.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.5.14",
     "prettier": "^3.3.2",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
     "stylelint": "^16.6.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
     "stylelint-order": "^6.0.4",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^7.13.1"
+    "typescript-eslint": "^7.13.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
   }
 }
