--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
+    "build": "cross-env NODE_ENV=production GENERATE_SOURCEMAP=false webpack --config ./scripts/config/webpack.prod.js",
     "lint": "npm run lint-eslint && npm run lint-stylelint",
     "lint-eslint": "eslint -c eslint.config.mjs",
     "lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
@@ -47,30 +47,44 @@
   },
   "homepage": "https://github.com/KIDinfinity/react_ts_test#readme",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.5.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/webpack-env": "^1.18.5",
     "autoprefixer": "^10.4.19",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "glob": "^10.4.2",
     "globals": "^15.6.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "lint-staged": "^15.2.7",
+    "mini-css-extract-plugin": "^2.9.0",
     "node-sass": "^9.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^8.1.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^9.5.14",
     "prettier": "^3.3.2",
+    "purgecss-webpack-plugin": "^3.0.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "stylelint": "^16.6.1",
@@ -78,12 +92,21 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
     "stylelint-order": "^6.0.4",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.92.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "webpackbar": "^6.0.1"
+  },
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.24.7",
+    "axios": "^1.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
